[workspace]
resolver = "2"
members = [
    "factory",
    "factory/state",
    "pair",
    "pair/state",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token", branch = "update-deps" }
ft-main = { git = "https://github.com/gear-dapps/sharded-fungible-token", branch = "update-deps" }
ft-logic = { git = "https://github.com/gear-dapps/sharded-fungible-token", branch = "update-deps" }
ft-storage = { git = "https://github.com/gear-dapps/sharded-fungible-token", branch = "update-deps" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
dex-pair-io.path = "pair/io"
dex-factory-io.path = "factory/io"
hashbrown = "0.14"
primitive-types = { version = "0.12", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", branch = "as-dev-dev" }
