[package]
name = "dex-factory"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
dex-factory-io = { path = "io" }
dex-pair-io = { path = "../pair/io" }
hashbrown = "0.13"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
dex-factory-io = { path = "io" }

[features]
binary-vendor = []
