[package]
name = "dex-pair"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
dex-pair-io = { path = "io" }
dex-factory-io = { path = "../factory/io" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", rev = "9feeb7c" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", branch = "as-derive-debug" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", branch = "as-derive-debug" }
hashbrown = "0.13"
primitive-types = { version = "0.12", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["debug"] }
pretty_assertions = "1"
dex-factory = { path = "../factory" }
dex-factory-state = { path = "../factory/state" }
dex-pair-state = { path = "state" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
dex-pair-io = { path = "io" }

[features]
default = ["binary-vendor"]
binary-vendor = []
