[package]
name = "dex-factory-state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
# TODO: pin to the "stable" branch before the merge.
gmeta = { git = "https://github.com/gear-tech/gear.git", features = ["codegen"] }
dex-factory-io = { path = "../io" }

[build-dependencies]
# TODO: pin to the "stable" branch before the merge.
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"] }
