[package]
name = "dex-pair-io"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
primitive-types = { version = "0.12", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", branch = "as-dev" }
